[package]
name = "ws2812-nop-imxrt1062"
version = "0.2.0"
edition = "2021"
description = "Nop-based bitbanger for 600MHz (customizeable) IMXRT1062 devices"
license = "MIT"
repository = "https://github.com/dwbrite/ws2812_nop_imxrt1062"
documentation = "https://docs.rs/ws2812-nop-imxrt1062/"
homepage = "https://dwbrite.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
smart-leds-trait = "0.2.1"